lib/dmp40/TLDFM.h

ViStatus _VI_FUNC TLDFM_add_status_delegate           (ViSession    instrumentHandle,
	                                                   StatusUpdate statusUpdateDelegate);
//******************************************************************************

ViStatus _VI_FUNC TLDFM_get_segment_count             (ViSession instrumentHandle,
                                                       ViUInt32* pSegmentCount);
ViStatus _VI_FUNC TLDFM_get_segment_maximum           (ViSession instrumentHandle,
                                                       ViReal64* pSegmentMaximum);
ViStatus _VI_FUNC TLDFM_get_segment_minimum           (ViSession instrumentHandle,
                                                       ViReal64* pSegmentMinimum);
ViStatus _VI_FUNC TLDFM_get_tilt_count                (ViSession instrumentHandle,
                                                       ViUInt32* pTiltCount);
ViStatus _VI_FUNC TLDFM_get_tilt_maximum              (ViSession instrumentHandle,
                                                       ViReal64* pTiltMaximum);
ViStatus _VI_FUNC TLDFM_get_tilt_minimum              (ViSession instrumentHandle,
                                                       ViReal64* pTiltMinimum);
//******************************************************************************

ViStatus _VI_FUNC TLDFM_set_access_level              (ViSession instrumentHandle,
                                                       ViChar    accessLevel,
                                                       ViChar    accessPassword[]);
ViStatus _VI_FUNC TLDFM_get_device_configuration      (ViSession instrumentHandle,
                                                       ViUInt32* pSegmentCnt,
                                                       ViReal64* pMinSegmentVoltage,
                                                       ViReal64* pMaxSegmentVoltage,
                                                       ViReal64* pSegmentCommonVoltageMax,
                                                       ViUInt32* pTiltElementCnt,
                                                       ViReal64* pMinTiltVoltage,
                                                       ViReal64* pMaxTiltVoltage,
                                                       ViReal64* pTiltCommonVoltageMax);
ViStatus _VI_FUNC TLDFM_set_device_configuration      (ViSession instrumentHandle,
                                                       ViUInt32  segmentCnt,
                                                       ViReal64  minSegmentVoltage,
                                                       ViReal64  maxSegmentVoltage,
                                                       ViReal64  segmentCommonVoltageMax,
                                                       ViUInt32  tiltElementCnt,
                                                       ViReal64  minTiltVoltage,
                                                       ViReal64  maxTiltVoltage,
                                                       ViReal64  tiltCommonVoltageMax);
ViStatus _VI_FUNC TLDFM_get_device_calibration        (ViSession instrumentHandle,
                                                       ViReal64* pSegmentVoltageCompensation,
                                                       ViReal64* pTiltVoltageCompensation,
                                                       ViReal64* pSingleSegmentTiltVoltage);
ViStatus _VI_FUNC TLDFM_set_device_calibration        (ViSession instrumentHandle,
                                                       ViReal64  segmentVoltageCompensation,
                                                       ViReal64  tiltVoltageCompensation,
                                                       ViReal64  singleSegmentTiltVoltage);
ViStatus _VI_FUNC TLDFM_get_hysteresis_parameters     (ViSession    instrumentHandle,
                                                       TLDFM_Target target,
                                                       ViUInt32*    pCount,
                                                       ViReal64*    pNonlinearFactor,
                                                       ViReal64     arrayTresholdInverter[],
                                                       ViReal64     arrayWeightInverter[]);
ViStatus _VI_FUNC TLDFM_set_hysteresis_parameters     (ViSession    instrumentHandle,
                                                       TLDFM_Target target,
                                                       ViUInt32     count,
                                                       ViReal64     nonlinearFactor,
                                                       ViReal64     arrayTresholdInverter[],
                                                       ViReal64     arrayWeightInverter[]);