src/dmp40j/bindings/TLDFM_64Library.java

	/**
	 * Original signature : <code>_VI_FUNC TLDFM_add_status_delegate(ViSession, StatusUpdate)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:132</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_add_status_delegate(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.StatusUpdate statusUpdateDelegate) {
		return Pointer.pointerToAddress(TLDFM_add_status_delegate(Pointer.getPeer(instrumentHandle), Pointer.getPeer(statusUpdateDelegate)));
	}
	@Ptr 
	protected native static long TLDFM_add_status_delegate(@Ptr long instrumentHandle, @Ptr long statusUpdateDelegate);
	/**
	 * ******************************************************************************<br>
	 * Original signature : <code>_VI_FUNC TLDFM_get_segment_count(ViSession, ViUInt32*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:137</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_segment_count(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViUInt32 > pSegmentCount) {
		return Pointer.pointerToAddress(TLDFM_get_segment_count(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pSegmentCount)));
	}
	@Ptr 
	protected native static long TLDFM_get_segment_count(@Ptr long instrumentHandle, @Ptr long pSegmentCount);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_segment_maximum(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:140</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_segment_maximum(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pSegmentMaximum) {
		return Pointer.pointerToAddress(TLDFM_get_segment_maximum(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pSegmentMaximum)));
	}
	@Ptr 
	protected native static long TLDFM_get_segment_maximum(@Ptr long instrumentHandle, @Ptr long pSegmentMaximum);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_segment_minimum(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:143</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_segment_minimum(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pSegmentMinimum) {
		return Pointer.pointerToAddress(TLDFM_get_segment_minimum(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pSegmentMinimum)));
	}
	@Ptr 
	protected native static long TLDFM_get_segment_minimum(@Ptr long instrumentHandle, @Ptr long pSegmentMinimum);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_tilt_count(ViSession, ViUInt32*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:146</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_tilt_count(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViUInt32 > pTiltCount) {
		return Pointer.pointerToAddress(TLDFM_get_tilt_count(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pTiltCount)));
	}
	@Ptr 
	protected native static long TLDFM_get_tilt_count(@Ptr long instrumentHandle, @Ptr long pTiltCount);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_tilt_maximum(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:149</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_tilt_maximum(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pTiltMaximum) {
		return Pointer.pointerToAddress(TLDFM_get_tilt_maximum(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pTiltMaximum)));
	}
	@Ptr 
	protected native static long TLDFM_get_tilt_maximum(@Ptr long instrumentHandle, @Ptr long pTiltMaximum);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_tilt_minimum(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:152</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_tilt_minimum(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pTiltMinimum) {
		return Pointer.pointerToAddress(TLDFM_get_tilt_minimum(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pTiltMinimum)));
	}
	@Ptr 
	protected native static long TLDFM_get_tilt_minimum(@Ptr long instrumentHandle, @Ptr long pTiltMinimum);
	/**
	 * ******************************************************************************<br>
	 * Original signature : <code>_VI_FUNC TLDFM_set_access_level(ViSession, ViChar, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:157</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_access_level(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViChar accessLevel, Pointer<TLDFM_64Library.ViChar > accessPassword) {
		return Pointer.pointerToAddress(TLDFM_set_access_level(Pointer.getPeer(instrumentHandle), Pointer.getPeer(accessLevel), Pointer.getPeer(accessPassword)));
	}
	@Ptr 
	protected native static long TLDFM_set_access_level(@Ptr long instrumentHandle, @Ptr long accessLevel, @Ptr long accessPassword);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_device_configuration(ViSession, ViUInt32*, ViReal64*, ViReal64*, ViReal64*, ViUInt32*, ViReal64*, ViReal64*, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:161</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_device_configuration(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViUInt32 > pSegmentCnt, Pointer<TLDFM_64Library.ViReal64 > pMinSegmentVoltage, Pointer<TLDFM_64Library.ViReal64 > pMaxSegmentVoltage, Pointer<TLDFM_64Library.ViReal64 > pSegmentCommonVoltageMax, Pointer<TLDFM_64Library.ViUInt32 > pTiltElementCnt, Pointer<TLDFM_64Library.ViReal64 > pMinTiltVoltage, Pointer<TLDFM_64Library.ViReal64 > pMaxTiltVoltage, Pointer<TLDFM_64Library.ViReal64 > pTiltCommonVoltageMax) {
		return Pointer.pointerToAddress(TLDFM_get_device_configuration(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pSegmentCnt), Pointer.getPeer(pMinSegmentVoltage), Pointer.getPeer(pMaxSegmentVoltage), Pointer.getPeer(pSegmentCommonVoltageMax), Pointer.getPeer(pTiltElementCnt), Pointer.getPeer(pMinTiltVoltage), Pointer.getPeer(pMaxTiltVoltage), Pointer.getPeer(pTiltCommonVoltageMax)));
	}
	@Ptr 
	protected native static long TLDFM_get_device_configuration(@Ptr long instrumentHandle, @Ptr long pSegmentCnt, @Ptr long pMinSegmentVoltage, @Ptr long pMaxSegmentVoltage, @Ptr long pSegmentCommonVoltageMax, @Ptr long pTiltElementCnt, @Ptr long pMinTiltVoltage, @Ptr long pMaxTiltVoltage, @Ptr long pTiltCommonVoltageMax);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_device_configuration(ViSession, ViUInt32, ViReal64, ViReal64, ViReal64, ViUInt32, ViReal64, ViReal64, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:171</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_device_configuration(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 segmentCnt, TLDFM_64Library.ViReal64 minSegmentVoltage, TLDFM_64Library.ViReal64 maxSegmentVoltage, TLDFM_64Library.ViReal64 segmentCommonVoltageMax, TLDFM_64Library.ViUInt32 tiltElementCnt, TLDFM_64Library.ViReal64 minTiltVoltage, TLDFM_64Library.ViReal64 maxTiltVoltage, TLDFM_64Library.ViReal64 tiltCommonVoltageMax) {
		return Pointer.pointerToAddress(TLDFM_set_device_configuration(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentCnt), Pointer.getPeer(minSegmentVoltage), Pointer.getPeer(maxSegmentVoltage), Pointer.getPeer(segmentCommonVoltageMax), Pointer.getPeer(tiltElementCnt), Pointer.getPeer(minTiltVoltage), Pointer.getPeer(maxTiltVoltage), Pointer.getPeer(tiltCommonVoltageMax)));
	}
	@Ptr 
	protected native static long TLDFM_set_device_configuration(@Ptr long instrumentHandle, @Ptr long segmentCnt, @Ptr long minSegmentVoltage, @Ptr long maxSegmentVoltage, @Ptr long segmentCommonVoltageMax, @Ptr long tiltElementCnt, @Ptr long minTiltVoltage, @Ptr long maxTiltVoltage, @Ptr long tiltCommonVoltageMax);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_device_calibration(ViSession, ViReal64*, ViReal64*, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:181</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_device_calibration(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViReal64 > pSegmentVoltageCompensation, Pointer<TLDFM_64Library.ViReal64 > pTiltVoltageCompensation, Pointer<TLDFM_64Library.ViReal64 > pSingleSegmentTiltVoltage) {
		return Pointer.pointerToAddress(TLDFM_get_device_calibration(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pSegmentVoltageCompensation), Pointer.getPeer(pTiltVoltageCompensation), Pointer.getPeer(pSingleSegmentTiltVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_get_device_calibration(@Ptr long instrumentHandle, @Ptr long pSegmentVoltageCompensation, @Ptr long pTiltVoltageCompensation, @Ptr long pSingleSegmentTiltVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_device_calibration(ViSession, ViReal64, ViReal64, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:186</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_device_calibration(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViReal64 segmentVoltageCompensation, TLDFM_64Library.ViReal64 tiltVoltageCompensation, TLDFM_64Library.ViReal64 singleSegmentTiltVoltage) {
		return Pointer.pointerToAddress(TLDFM_set_device_calibration(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentVoltageCompensation), Pointer.getPeer(tiltVoltageCompensation), Pointer.getPeer(singleSegmentTiltVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_set_device_calibration(@Ptr long instrumentHandle, @Ptr long segmentVoltageCompensation, @Ptr long tiltVoltageCompensation, @Ptr long singleSegmentTiltVoltage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_hysteresis_parameters(ViSession, ViUInt32, ViUInt32*, ViReal64*, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:191</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_hysteresis_parameters(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 target, Pointer<TLDFM_64Library.ViUInt32 > pCount, Pointer<TLDFM_64Library.ViReal64 > pNonlinearFactor, Pointer<TLDFM_64Library.ViReal64 > arrayTresholdInverter, Pointer<TLDFM_64Library.ViReal64 > arrayWeightInverter) {
		return Pointer.pointerToAddress(TLDFM_get_hysteresis_parameters(Pointer.getPeer(instrumentHandle), Pointer.getPeer(target), Pointer.getPeer(pCount), Pointer.getPeer(pNonlinearFactor), Pointer.getPeer(arrayTresholdInverter), Pointer.getPeer(arrayWeightInverter)));
	}
	@Ptr 
	protected native static long TLDFM_get_hysteresis_parameters(@Ptr long instrumentHandle, @Ptr long target, @Ptr long pCount, @Ptr long pNonlinearFactor, @Ptr long arrayTresholdInverter, @Ptr long arrayWeightInverter);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_set_hysteresis_parameters(ViSession, ViUInt32, ViUInt32, ViReal64, ViReal64[], ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:198</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_hysteresis_parameters(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 target, TLDFM_64Library.ViUInt32 count, TLDFM_64Library.ViReal64 nonlinearFactor, Pointer<TLDFM_64Library.ViReal64 > arrayTresholdInverter, Pointer<TLDFM_64Library.ViReal64 > arrayWeightInverter) {
		return Pointer.pointerToAddress(TLDFM_set_hysteresis_parameters(Pointer.getPeer(instrumentHandle), Pointer.getPeer(target), Pointer.getPeer(count), Pointer.getPeer(nonlinearFactor), Pointer.getPeer(arrayTresholdInverter), Pointer.getPeer(arrayWeightInverter)));
	}
	@Ptr 
	protected native static long TLDFM_set_hysteresis_parameters(@Ptr long instrumentHandle, @Ptr long target, @Ptr long count, @Ptr long nonlinearFactor, @Ptr long arrayTresholdInverter, @Ptr long arrayWeightInverter);
